deploying with base.html files

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,1 +1,8 @@
-<h1>it is working</h1>
+{% extends "base.html" %}
+
+{% load wagtailcore_tags %}
+
+{% block content %}
+<!-- Add your custom HTML and template tags here -->
+<h1>this coming the app home</h1>
+{% endblock %}
