removed unused html tags

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,15 +19,15 @@
   <link rel="shortcut icon" href="{% static 'src/img/favicon.png' %}" type="image/x-icon">
   <link href="{% static 'src/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'src/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
-  <link href="{% static 'src/css/elegant-icons.css' %}" rel="stylesheet" type="text/css">
+  <!-- <link href="{% static 'src/css/elegant-icons.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'src/css/themify-icons.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'src/css/flaticon-set.css' %}" rel="stylesheet" type="text/css">
-  <link href="{% static 'src/css/magnific-popup.css' %}" rel="stylesheet" type="text/css">
-  <link href="{% static 'src/css/swiper-bundle.min.css' %}" rel="stylesheet" type="text/css">
+  <link href="{% static 'src/css/magnific-popup.css' %}" rel="stylesheet" type="text/css"> -->
+  <!-- <link href="{% static 'src/css/swiper-bundle.min.css' %}" rel="stylesheet" type="text/css"> -->
   <link href="{% static 'src/css/animate.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'src/css/validnavs.css' %}" rel="stylesheet" type="text/css">
-  <link href="{% static 'src/css/helper.css' %}" rel="stylesheet" type="text/css">
-  <link href="{% static 'src/css/unit-test.css' %}" rel="stylesheet" type="text/css">
+  <!-- <link href="{% static 'src/css/helper.css' %}" rel="stylesheet" type="text/css"> -->
+  <!-- <link href="{% static 'src/css/unit-test.css' %}" rel="stylesheet" type="text/css"> -->
   <link href="{% static 'src/css/style.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'dist/css/main.css' %}" rel="stylesheet" type="text/css">
 
@@ -539,51 +539,6 @@
 
 
 
-
-<div class="brand-style-one-area text-center default-padding-top">
-  <div class="container">
-    <div class="brand-style-one">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="brand5col swiper">
-
-            <div class="swiper-wrapper align-center">
-
-              <div class="swiper-slide">
-                <img src="{% static 'src/img/200x120.png' %}" alt="Thumb">
-              </div>
-
-
-              <div class="swiper-slide">
-                <img src="{% static 'src/img/200x120.png' %}" alt="Thumb">
-              </div>
-
-
-              <div class="swiper-slide">
-                <img src="{% static 'src/img/200x120.png' %}" alt="Thumb">
-              </div>
-
-
-              <div class="swiper-slide">
-                <img src="{% static 'src/img/200x120.png' %}" alt="Thumb">
-              </div>
-
-
-              <div class="swiper-slide">
-                <img src="{% static 'src/img/200x120.png' %}" alt="Thumb">
-              </div>
-
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</div>
-
-
-
 <div class="work-available-area text-center box-layout bg-light default-padding">
   <div class="shape-right-top-mini">
     <img src="{% static 'src/img/shape/16.png' %}" alt="illustration">
@@ -715,21 +670,21 @@
 {% block extra_js %}
 <script src="{% static 'src/js/jquery-3.6.0.min.js' %}"></script>
 <script src="{% static 'src/js/bootstrap.bundle.min.js' %}"></script>
-<script src="{% static 'src/js/jquery.appear.js' %}"></script>
-<script src="{% static 'src/js/jquery.easing.min.js' %}"></script>
-<script src="{% static 'src/js/jquery.magnific-popup.min.js' %}"></script>
-<script src="{% static 'src/js/modernizr.custom.13711.js' %}"></script>
-<script src="{% static 'src/js/swiper-bundle.min.js' %}"></script>
+<!-- <script src="{% static 'src/js/jquery.appear.js' %}"></script> -->
+<!-- <script src="{% static 'src/js/jquery.easing.min.js' %}"></script> -->
+<!-- <script src="{% static 'src/js/jquery.magnific-popup.min.js' %}"></script> -->
+<!-- <script src="{% static 'src/js/modernizr.custom.13711.js' %}"></script> -->
+<!-- <script src="{% static 'src/js/swiper-bundle.min.js' %}"></script> -->
 <script src="{% static 'src/js/wow.min.js' %}"></script>
-<script src="{% static 'src/js/progress-bar.min.js' %}"></script>
-<script src="{% static 'src/js/circle-progress.js' %}"></script>
-<script src="{% static 'src/js/isotope.pkgd.min.js' %}"></script>
-<script src="{% static 'src/js/imagesloaded.pkgd.min.js' %}"></script>
-<script src="{% static 'src/js/jquery.nice-select.min.js' %}"></script>
-<script src="{% static 'src/js/count-to.js' %}"></script>
-<script src="{% static 'src/js/jquery.scrolla.min.js' %}"></script>
-<script src="{% static 'src/js/YTPlayer.min.js' %}"></script>
-<script src="{% static 'src/js/TweenMax.min.js' %}"></script>
+<!-- <script src="{% static 'src/js/progress-bar.min.js' %}"></script> -->
+<!-- <script src="{% static 'src/js/circle-progress.js' %}"></script> -->
+<!-- <script src="{% static 'src/js/isotope.pkgd.min.js' %}"></script> -->
+<!-- <script src="{% static 'src/js/imagesloaded.pkgd.min.js' %}"></script> -->
+<!-- <script src="{% static 'src/js/jquery.nice-select.min.js' %}"></script> -->
+<!-- <script src="{% static 'src/js/count-to.js' %}"></script> -->
+<!-- <script src="{% static 'src/js/jquery.scrolla.min.js' %}"></script> -->
+<!-- <script src="{% static 'src/js/YTPlayer.min.js' %}"></script> -->
+<!-- <script src="{% static 'src/js/TweenMax.min.js' %}"></script> -->
 <script src="{% static 'src/js/typed.js' %}"></script>
 <script src="{% static 'src/js/validnavs.js' %}"></script>
 <script src="{% static 'src/js/main.js' %}"></script>
