--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,7 +16,13 @@
 
   {% block extra_css %}
 
-  <link rel="shortcut icon" href="{% static 'src/img/favicon.png' %}" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'src/img//apple-touch-icon.png' %}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'src/img/favicon-32x32.png' %}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'src/img/favicon-16x16.png' %}">
+  <link rel="manifest" href="{% static 'src/img/site.webmanifest' %}">
+  <link rel="mask-icon" href="{% static 'src/img/safari-pinned-tab.svg' %}" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
   <link href="{% static 'src/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'src/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
   <!-- <link href="{% static 'src/css/elegant-icons.css' %}" rel="stylesheet" type="text/css">
@@ -104,7 +110,7 @@
           <i class="fa fa-bars"></i>
         </button>
         <a class="navbar-brand" href="index.html">
-          <img src="{% static 'src/img/logo.png' %}" class="logo" alt="Logo">
+          <img src="{% static 'src/img/logo-new.png' %}" class="logo" alt="Logo">
         </a>
       </div>
 
@@ -112,7 +118,7 @@
 
       <div class="collapse navbar-collapse" id="navbar-menu">
 
-        <img src="{% static 'src/img/logo.png' %}" alt="Logo">
+        <img src="{% static 'src/img/logo-new.png' %}" alt="Logo">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
           <i class="fa fa-times"></i>
         </button>
