Revert "adding a railway config"
This reverts commit 6798f4a2c496a1a19dca8d000c8204873ed43312.

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -287,7 +287,6 @@
         <div class="magnific-mix-gallery masonary">
           <div id="portfolio-grid" class="gallery-items colums-3">
 
-            {% for i in '012345'|make_list %}
             <div class="pf-item">
               <div class="overlay-content">
                 <img src="{% static 'src/img/800x600.png' %}" alt="thumb">
@@ -302,9 +301,9 @@
                 </div>
               </div>
             </div>
-            {% endfor %}
 
-            <!-- <div class="pf-item">
+
+            <div class="pf-item">
               <div class="overlay-content">
                 <img src="{% static 'src/img/800x600.png' %}" alt="thumb">
                 <div class="content">
@@ -378,7 +377,7 @@
                       class="fas fa-arrow-right"></i></a>
                 </div>
               </div>
-            </div> -->
+            </div>
 
           </div>
         </div>
